--- a/app/src/main/res/layout/content_transaction_info.xml
+++ b/app/src/main/res/layout/content_transaction_info.xml
@@ -2,8 +2,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragment"
-    android:name="com.escrowwidget.root.escrowtransactreal.MainActivityFragment"
+    android:name="com.escrowwidget.root.escrowtransactreal.TransactionInfoFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:layout="@layout/fragment_main" />
+    tools:layout="@layout/fragment_transaction_info" />
